<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		businessdetail
	 *	@date 		Friday 24th of November 2023 04:09:43 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/businessdetail" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_businessdetail_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__businessdetail_ek2"
					android:background="@drawable/detail_bg__businessdetail_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="414dp"
					android:layout_height="896dp" />


				<RelativeLayout android:id="@+id/__container_slider_default__slider_indicator__cdbaac__slider_infinite_"
					android:layout_marginTop="409dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg____container_slider_default__slider_indicator__cdbaac__slider_infinite__ek1"

						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="414dp"
						android:layout_height="184dp" />


					<RelativeLayout android:id="@+id/slide_1"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

<!--						<View   android:id="@+id/_bg__slide_1_ek1"-->
<!--							android:background="@drawable/detail_bg__slide_1_ek1_shape"-->
<!--							 android:layout_marginStart="0dp"-->
<!--							android:layout_marginTop="0dp"-->
<!--							android:layout_width="414dp"-->
<!--							android:layout_height="184dp" />-->

						<ImageView android:id="@+id/platter_gab742ad7c_1920_1"
							android:src="@drawable/detail_platter_gab742ad7c_1920_1"
							android:contentDescription="platter_gab742ad7c_1920_1"
							 android:layout_marginStart="34dp"
							android:layout_marginTop="12dp"
							android:layout_width="346dp"
							android:layout_height="158dp" />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/slide_2"
						android:layout_marginTop="0dp"
						android:layout_marginStart="414dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__slide_2_ek1"

							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="414dp"
							android:layout_height="184dp" />

						<ImageView android:id="@+id/platter_gab742ad7c_1920_1_ek1"
							android:src="@drawable/detail_platter_gab742ad7c_1920_1_ek1"
							android:contentDescription="platter_gab742ad7c_1920_1_ek1"
							 android:layout_marginStart="34dp"
							android:layout_marginTop="12dp"
							android:layout_width="346dp"
							android:layout_height="158dp" />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/slide_3"
						android:layout_marginTop="0dp"
						android:layout_marginStart="828dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__slide_3_ek1"

							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="414dp"
							android:layout_height="184dp" />

						<ImageView android:id="@+id/platter_gab742ad7c_1920_1_ek2"
							android:src="@drawable/detail_platter_gab742ad7c_1920_1_ek2"
							android:contentDescription="platter_gab742ad7c_1920_1_ek2"
							 android:layout_marginStart="34dp"
							android:layout_marginTop="12dp"
							android:layout_width="346dp"
							android:layout_height="158dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/__container_"
					android:layout_marginTop="110dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg____container__ek1"

						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="414dp"
						android:layout_height="299dp" />

					<TextView android:id="@+id/business_name"
						android:textStyle="bold"
						android:textSize="24sp"
						android:textColor="@color/_bg____container_slider_default__slider_indicator__cdbaac__slider_infinite__ek1_color"
						android:layout_marginLeft="32.34dp"
						android:layout_marginTop="16dp"
						android:layout_width="368.72dp"
						android:layout_height="52.13dp"
						android:text="@string/business_name_string"
						 />

					<TextView android:id="@+id/_____"
						android:textSize="16sp"
						android:textColor="@color/______color"
						android:layout_marginLeft="32.34dp"
						android:layout_marginTop="88dp"
						android:layout_width="82.27dp"
						android:layout_height="31.28dp"
						android:text="@string/______string"
						 />

					<TextView android:id="@+id/number_of_reviews"
						android:layout_gravity="center_vertical|end"
						android:gravity="end"
						android:textSize="16sp"
						android:textColor="@color/______color"
						android:layout_marginLeft="171.59dp"
						android:layout_marginTop="58.93dp"
						android:layout_width="214dp"
						android:layout_height="31.28dp"
						android:text="@string/number_of_reviews_string"
						 />

					<TextView android:id="@+id/category"
						android:textSize="16sp"
						android:textColor="@color/category_color"
						android:layout_marginLeft="32.34dp"
						android:layout_marginTop="117dp"
						android:layout_width="214.8dp"
						android:layout_height="31.28dp"
						android:text="@string/category_string"
						 />

					<TextView android:id="@+id/address"
						android:textSize="16sp"
						android:textColor="@color/______color"
						android:layout_marginLeft="32.34dp"
						android:layout_marginTop="150dp"
						android:layout_width="363.92dp"
						android:layout_height="45.36dp"
						android:text="@string/address_string"
						 />

					<TextView android:id="@+id/______"
						android:textSize="20sp"
						android:textColor="@color/_______color"
						android:layout_marginLeft="32.34dp"
						android:layout_marginTop="58.93dp"
						android:layout_width="166.13dp"
						android:layout_height="32.68dp"
						android:text="@string/_______string"
						 />

					<View   android:id="@+id/rectangle_215"
						android:background="@drawable/detail_rectangle_215_shape"
						 android:layout_marginStart="24.47dp"
						android:layout_marginTop="200dp"
						android:layout_width="365.06dp"
						android:layout_height="2.85dp" />


					<RelativeLayout android:id="@+id/write"
						android:layout_marginTop="222dp"
						android:layout_marginStart="54.38dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__write_ek1"
							android:background="@drawable/detail_bg__write_ek1_shape"
							 android:layout_marginStart="-54dp"
							android:layout_marginTop="-222dp"
							android:layout_width="87dp"
							android:layout_height="59.11dp" />

						<TextView android:id="@+id/write_message"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="14sp"
							android:textColor="@color/write_message_color"
							android:layout_marginLeft="-2dp"
							android:layout_marginTop="38dp"
							android:layout_width="93.4dp"
							android:layout_height="25.4dp"
							android:text="@string/write_message_string"
							 />

						<ImageView android:id="@+id/vector"
							android:src="@drawable/detail_vector"
							android:contentDescription="vector"
							 android:layout_marginStart="27dp"
							android:layout_marginTop="0dp"
							android:layout_width="33.3dp"
							android:layout_height="31.08dp" />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/__call_action_phone__34123456789_"
						android:layout_marginTop="226.84dp"
						android:layout_marginStart="200.38dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg____call_action_phone__34123456789__ek1"
							android:background="@drawable/detail_bg____call_action_phone__34123456789__ek1_shape"
							 android:layout_marginStart="-200dp"
							android:layout_marginTop="-227dp"
							android:layout_width="26.24dp"
							android:layout_height="54.27dp" />

						<TextView android:id="@+id/call"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="14sp"
							android:textColor="@color/write_message_color"
							android:layout_marginLeft="-0dp"
							android:layout_marginTop="33dp"
							android:layout_width="29.4dp"
							android:layout_height="25.4dp"
							android:text="@string/call_string"
							 />

						<ImageView android:id="@+id/vector_ek1"
							android:src="@drawable/detail_vector_ek1"
							android:contentDescription="vector_ek1"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="26.24dp"
							android:layout_height="26.24dp" />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/__web_action_openurl_https___www_bravostudio_app_"
						android:layout_marginTop="226.84dp"
						android:layout_marginStart="284.62dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg____web_action_openurl_https___www_bravostudio_app__ek1"
							android:background="@drawable/detail_bg____web_action_openurl_https___www_bravostudio_app__ek1_shape"
							 android:layout_marginStart="-285dp"
							android:layout_marginTop="-227dp"
							android:layout_width="76dp"
							android:layout_height="54.27dp" />

						<TextView android:id="@+id/visit_website"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="14sp"
							android:textColor="@color/write_message_color"
							android:layout_marginLeft="-2dp"
							android:layout_marginTop="33dp"
							android:layout_width="82.4dp"
							android:layout_height="25.4dp"
							android:text="@string/visit_website_string"
							 />

						<ImageView android:id="@+id/vector_ek2"
							android:src="@drawable/detail_vector_ek2"
							android:contentDescription="vector_ek2"
							 android:layout_marginStart="25dp"
							android:layout_marginTop="0dp"
							android:layout_width="26.24dp"
							android:layout_height="26.24dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/__container__ek2"
					android:layout_marginTop="593dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg____container__ek3"

						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="414dp"
						android:layout_height="73dp" />


					<RelativeLayout android:id="@+id/group_427319990"
						android:layout_marginTop="11.46dp"
						android:layout_marginStart="268.02dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__group_427319990_ek1"
							android:background="@drawable/detail_bg__group_427319990_ek1_shape"
							 android:layout_marginStart="-268dp"
							android:layout_marginTop="-11dp"
							android:layout_width="131.53dp"
							android:layout_height="45dp" />

						<View   android:id="@+id/rectangle_218"
							android:background="@drawable/detail_rectangle_218_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="131.53dp"
							android:layout_height="45dp" />

						<TextView android:id="@+id/btntxt"
							android:textStyle="bold"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="16sp"
							android:textColor="@color/_bg__businessdetail_ek2_color"
							android:layout_marginLeft="9dp"
							android:layout_marginTop="0dp"
							android:layout_width="113.36dp"
							android:layout_height="49.6dp"
							android:text="@string/btntxt_string"
							 />

					</RelativeLayout>

					<TextView android:id="@+id/reviews"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/_bg____container_slider_default__slider_indicator__cdbaac__slider_infinite__ek1_color"
						android:layout_marginLeft="24.18dp"
						android:layout_marginTop="8.63dp"
						android:layout_width="366.32dp"
						android:layout_height="50.73dp"
						android:text="@string/reviews_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/__reviews_container_"
					android:layout_marginTop="666dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg____reviews_container__ek1"

						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="414dp"
						android:layout_height="116dp" />

					<TextView android:id="@+id/review_text_flexo_"
						android:textSize="16sp"
						android:textColor="@color/______color"
						android:layout_marginLeft="34dp"
						android:layout_marginTop="74dp"
						android:layout_width="362.6dp"
						android:layout_height="30.6dp"
						android:text="@string/review_text_flexo__string"
						 />

					<TextView android:id="@+id/author"
						android:textStyle="bold"
						android:textSize="16sp"
						android:textColor="@color/category_color"
						android:layout_marginLeft="33.72dp"
						android:layout_marginTop="15.39dp"
						android:layout_width="362.54dp"
						android:layout_height="31.28dp"
						android:text="@string/author_string"
						 />

					<TextView android:id="@+id/_______ek1"
						android:textSize="16sp"
						android:textColor="@color/_______color"
						android:layout_marginLeft="34dp"
						android:layout_marginTop="42dp"
						android:layout_width="362.6dp"
						android:layout_height="31.6dp"
						android:text="@string/_______ek1_string"
						 />

					<View   android:id="@+id/rectangle_216"
						android:background="@drawable/detail_rectangle_216_shape"
						 android:layout_marginStart="33.72dp"
						android:layout_marginTop="6.94dp"
						android:layout_width="365.06dp"
						android:layout_height="2.85dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/topbar_container_top_bar_"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__topbar_container_top_bar__ek1"
						android:background="@drawable/detail_bg__topbar_container_top_bar__ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="414dp"
						android:layout_height="110dp" />

					<View   android:id="@+id/rectangle_1"
						android:background="@drawable/detail_rectangle_1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="414dp"
						android:layout_height="110dp" />

					<TextView android:id="@+id/yalp"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="24sp"
						android:textColor="@color/_bg__businessdetail_ek2_color"
						android:layout_marginLeft="78.26dp"
						android:layout_marginTop="27dp"
						android:layout_width="257dp"
						android:layout_height="62.72dp"
						android:text="WeRate"
						 />

					<ImageView android:id="@+id/vector_ek3"
						android:src="@drawable/detail_vector_ek3"
						android:contentDescription="vector_ek3"
						 android:layout_marginStart="18.2dp"
						android:layout_marginTop="41.96dp"
						android:layout_width="26dp"
						android:layout_height="26.24dp" />

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>